# countdown-timers-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.reuse/: dep5
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/countdowntimers/: AddTimerTest.kt  ExampleInstrumentedTest.kt  TimerBlockTest.kt  TimerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/countdowntimers/: Application.kt  MainActivity.kt
app/src/main/java/com/example/countdowntimers/comp/: AddTimer.kt  BenchClient.kt  Timer.kt  TimerBlock.kt
app/src/main/java/com/example/countdowntimers/lib/: bench.kt  data.kt  timers.kt
app/src/main/java/com/example/countdowntimers/model/: AppContainer.kt  OfflineTimerRepository.kt  ServerService.kt  TimerModel.kt  TimerRepository.kt
app/src/main/java/com/example/countdowntimers/viewmodel/: AddTimerUseCase.kt  BenchViewModel.kt  PopTimerUseCase.kt  RenderTimersUseCase.kt  TimerViewModel.kt
app/src/main/res/drawable/: delete_16dp.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/countdowntimers/: ExampleUnitTest.kt  TimerModelUnitTest.kt  TimerViewModelTest.kt  TimersTest.kt
countdown-rs/: Cargo.toml
countdown-rs/cd-android/: Cargo.toml  uniffi-bindgen.rs
countdown-rs/cd-android/src/: lib.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: build.gradle.kts
server/src/main/java/com/example/countdowntimers/server/: TimerRepository.kt  main.kt
(+5 files in other folders)
