# Copyright 2024 sby1ce
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "cd-android"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]
name = "cd_android"

[dependencies]
cd-core = { path = "../cd-core" }
uniffi = { version = "0.28", features = ["cli"] }

[lints.clippy]
single_call_fn = { level = "allow", priority = 1 }  # God function
too_many_lines = { level = "allow", priority = 1 }  # No, I don't think so
module_name_repetitions = { level = "allow", priority = 1 }  # This is annoying
multiple_crate_versions = { level = "allow", priority = 1 }  # Can't do anything about it
all = "warn"
cargo = "warn"
nursery = "deny"
pedantic = "deny"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
